# tq42-objective-function-quickstart

./: README.md  main.py  pyproject.toml
tests/tasks/: test_calculation.py  test_task_queue.py
tq42_objective_function_quickstart/: config.py  models.py  routes.py
tq42_objective_function_quickstart/tasks/: calculation.py  task_queue.py
